# CrimeScope

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  main.py  main_nb.py  pyproject.toml  pytest.ini  render.yml  requirements.txt  result.txt  taskfile.yml  test.py
CrimeScope_/: main.py
CrimeScope_/crimescope/: config.py
CrimeScope_/crimescope/api/: main.py
CrimeScope_/crimescope/api/routes/: forecasts.py  predictions.py
CrimeScope_/crimescope/data/: validation.py
CrimeScope_/crimescope/models/: classifier.py  explainability.py
CrimeScope_/crimescope/nlp/: embeddings.py  report_generator.py
CrimeScope_/crimescope/vision/: street_fetcher.py
CrimeScope_/frontend/: index.html
__marimo__/session/: main_nb.py.json
artifacts/chroma_db/: chroma.sqlite3
artifacts/models/: label_encoder.pkl
artifacts/reports/: all_reports.json  zone_1383_report.txt  zone_1384_report.txt  zone_1433_report.txt  zone_1434_report.txt  zone_1483_report.txt  zone_1484_report.txt  zone_1533_report.txt  zone_1681_report.txt  zone_1830_report.txt
artifacts/vision/: zone_risk_scores.json
crimescope/: __init__.py  config.py  main.py
crimescope/api/: main.py
crimescope/api/routes/: chat.py  heatmap.py
crimescope/data/: ingestion.py  preprocessing.py
crimescope/models/: forecaster.py
crimescope/nlp/: qa_chain.py
crimescope/utils/: __init__.py  geo.py  logger.py
crimescope/vision/: risk_scorer.py
tests/: conftest.py  test_classifier.py  test_forecaster.py  test_preprocessing.py
